--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -18,6 +18,7 @@
 
 [puppetmasterd]
     reportdir = $logdir/reports
+    autoflush = true
     storeconfigs=true
     dbadapter=mysql
     dbserver=localhost
