verschiedenes interval in puppet.conf (auskommentiert)
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@833 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/client/puppet.conf
+++ b/files/client/puppet.conf
@@ -20,3 +20,6 @@
     report=true
     server=puppet.glei.ch
 
+    # different run-interval, default= 30min
+    # e.g. run puppetd every 4 hours = 14400
+    # runinterval = 14400
