changed puppetmaster config to be possible to release
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1137 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -23,7 +23,7 @@
     dbadapter=mysql
     dbserver=localhost
     dbuser=puppet
-    dbpassword=PcjS3d5pMdU,cR,v
+    dbpassword=************
     dbsocket=/var/run/mysqld/mysqld.sock
 
     #reports=log
