some docu for master
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1155 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -29,6 +29,9 @@
     #reports=log
     modulepath=/var/lib/puppet/modules_src
 
+    #enable this if you're using a master
+    #ssl_client_header=HTTP_X_SSL_SUBJECT
+
 [puppetd]
     report=true
     server=puppet.glei.ch
