moved /dist/-stuff to /files/, heavily refactored a lot, made it more look all the same way. some sources added here and there. hope it still works everything, the location on the disk of /files/ is still call dists. no need to hurry to change that
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1160 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/fileserver.conf
+++ b/files/master/fileserver.conf
@@ -11,7 +11,7 @@
 #  deny *.evil.example.com
 #  allow 192.168.0.0/24
 #
-[dist]
+[files]
   path /var/lib/puppet/dist
   allow 127.0.0.1
   allow *.euskal.internal
