fixed some configs, changed to new puppetsetup
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1179 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/client/puppet.conf
+++ b/files/client/puppet.conf
@@ -4,7 +4,7 @@
     rundir=/var/run/puppet
     
     #ssldir=/var/lib/puppet/ssl
-    ssldir=/etc/puppet/ssl
+    ssldir=$vardir/ssl
     
     # Where 3rd party plugins and modules are installed
     libdir = /var/lib/puppet/lib
