--- a/files/master/fileserver.conf
+++ b/files/master/fileserver.conf
@@ -12,13 +12,13 @@
 #  allow 192.168.0.0/24
 #
 [files]
-  path /var/lib/puppet/dist
+  path /srv/puppet/files
   allow 127.0.0.1
   allow *.euskal.internal
   allow *.glei.ch
 
 [secfiles]
-  path /var/lib/puppet/secfiles
+  path /srv/puppet/secfiles
   allow 127.0.0.1
   allow *.euskal.internal
   allow *.glei.ch
