--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -1,20 +1,43 @@
 [main]
-    logdir=/var/log/puppet
-    vardir=/var/lib/puppet
-    rundir=/var/run/puppet
-    
-    #ssldir=/var/lib/puppet/ssl
-    ssldir=/etc/puppet/ssl
-    
-    # Where 3rd party plugins and modules are installed
-    libdir = /var/lib/puppet/lib
-    
-    templatedir=/var/lib/puppet/templates
+    confdir=/srv/puppet/etc
+
+    # Where Puppet stores dynamic and growing data.
+    # The default value is '/var/puppet'.
+    vardir = /srv/puppet
+
+    # The Puppet log directory.
+    # The default value is '$vardir/log'.
+    logdir = /var/log/puppet
+
+    # Where Puppet PID files are kept.
+    # The default value is '$vardir/run'.
+    rundir = /var/run/puppet
+
+    # Where SSL certificates are kept.
+    # The default value is '$confdir/ssl'.
+    ssldir = $vardir/ssl
 
     # Turn plug-in synchronization on.
     pluginsync = true
     pluginsource = puppet://$server/plugins
     factpath = $vardir/lib/facter
+    plugindest = $vardir/lib/plugins
+
+[puppetd]
+    # The file in which puppetd stores a list of the classes
+    # associated with the retrieved configuratiion.  Can be loaded in
+    # the separate ``puppet`` executable using the ``--loadclasses``
+    # option.
+    # The default value is '$confdir/classes.txt'.
+    classfile = $vardir/classes.txt
+
+    # Where puppetd caches the local configuration.  An
+    # extension indicating the cache format is added automatically.
+    # The default value is '$confdir/localconfig'.
+    localconfig = $vardir/localconfig
+
+    report=true
+    server=puppet.glei.ch
 
 [puppetmasterd]
     reportdir = $logdir/reports
@@ -23,16 +46,20 @@
     dbadapter=mysql
     dbserver=localhost
     dbuser=puppet
-    dbpassword=************
-    dbsocket=/var/run/mysqld/mysqld.sock
+    dbpassword=****************
+    dbsocket=/var/lib/mysql/mysql.sock
 
-    #reports=log
-    modulepath=/var/lib/puppet/modules_src
+    # specify allowed environments
+    environments=production,development
 
-    #enable this if you're using a master
-    #ssl_client_header=HTTP_X_SSL_SUBJECT
+    # configure environments
+    [development]
+    manifest=$vardir/development/etc/manifests/site.pp
+    modulepath=$vardir/development/manifests
+    templatepath=$vardir/development/templates/
 
-[puppetd]
-    report=true
-    server=puppet.glei.ch
+    [production]
+    manifest=$vardir/production/etc/manifests/site.pp
+    modulepath=$vardir/production/modules/
+    templatepath=$vardir/production/templates/
 
