refixed path, reverted to default
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1183 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -21,7 +21,7 @@
     pluginsync = true
     pluginsource = puppet://$server/plugins
     factpath = $vardir/lib/facter
-    plugindest = $vardir/lib/plugins
+    plugindest = $vardir/lib/puppet
 
 [puppetd]
     # The file in which puppetd stores a list of the classes
