fixed ssl-headers for clusters
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1220 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -49,6 +49,9 @@
     dbpassword=****************
     dbsocket=/var/lib/mysql/mysql.sock
 
+    #usage for clusters
+    #ssl_client_header=HTTP_X_SSL_SUBJECT
+
     # specify allowed environments
     environments=production,development
 
