moved our own fileserver config to the right place
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@1684 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/master/fileserver.conf
+++ b/files/master/fileserver.conf
@@ -14,18 +14,9 @@
 [files]
   path /srv/puppet/files
   allow 127.0.0.1
-  allow *.euskal.internal
-  allow *.glei.ch
-
-[secfiles]
-  path /srv/puppet/secfiles
-  allow 127.0.0.1
-  allow *.euskal.internal
-  allow *.glei.ch
+  allow *.example.com
 
 [modules]
   allow 127.0.0.1
-  allow *.glei.ch
-  allow *.euskal.internal
-#  path /var/lib/puppet/modules
+  allow *.example.com
 
