added marshal configs for puppet
git-svn-id: https://svn/ipuppet/trunk/modules/puppet@2072 d66ca3ae-40d7-4aa7-90d4-87d79ca94279

--- a/files/client/puppet.conf
+++ b/files/client/puppet.conf
@@ -20,6 +20,9 @@
     report=true
     server=puppet.glei.ch
 
+    # enable the marshal config format
+    config_format=marshal
+
     # different run-interval, default= 30min
     # e.g. run puppetd every 4 hours = 14400
     # runinterval = 14400
