correct new path

--- a/files/client/puppet.conf
+++ b/files/client/puppet.conf
@@ -13,7 +13,7 @@
 
     # Turn plug-in synchronization on.
     pluginsync = true
-    pluginsource = puppet://$server/plugins
+    pluginsource = puppet:///plugins
     factpath = $vardir/lib/facter
 
 [puppetd]
