--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -19,7 +19,7 @@
 
     # Turn plug-in synchronization on.
     pluginsync = true
-    pluginsource = puppet://$server/plugins
+    pluginsource = puppet:///plugins
     factpath = $vardir/lib/facter
     plugindest = $vardir/lib/puppet
 
@@ -37,7 +37,6 @@
     localconfig = $vardir/localconfig
 
     report=true
-    server=puppet.glei.ch
 
     logdest=/var/log/puppet/puppet.log
 
