update config file to 2.6

--- a/files/client/puppet.conf
+++ b/files/client/puppet.conf
@@ -16,7 +16,7 @@
     pluginsource = puppet:///plugins
     factpath = $vardir/lib/facter
 
-[puppetd]
+[agent]
     report=true
     server=puppet.glei.ch
 
