--- a/files/master/puppet.conf
+++ b/files/master/puppet.conf
@@ -23,7 +23,7 @@
     factpath = $vardir/lib/facter
     plugindest = $vardir/lib/puppet
 
-[puppetd]
+[agent]
     # The file in which puppetd stores a list of the classes
     # associated with the retrieved configuratiion.  Can be loaded in
     # the separate ``puppet`` executable using the ``--loadclasses``
@@ -40,7 +40,7 @@
 
     logdest=/var/log/puppet/puppet.log
 
-[puppetmasterd]
+[master]
     reportdir = $logdir/reports
     autoflush = true
     storeconfigs=true
